# map_mcp

./: .env_example  .gitignore  README.md  asking.md  main.py  project.md  pyproject.toml
client/: check_http_call.py  client.py  client_server.py  config.py  custom_client.py  llm_client.py  servers.py  servers_config.json
client/agent/: README.md  custom_agent.py
client/agent/local_servers/: plan_executor_tools.py  plan_generator_server.py  plan_generator_tools.py
client/config/: client_server_config.json  config.py  local_server_config.json  server_config.json
client/config/server/: plan_executor_config.json  plan_generator_config.json
client/custom_agent/: README.md
client/custom_agent/agents/: plan_executor_agent.py  plan_generator_agent.py  react_agent.py
client/custom_agent/local_servers/: plan_executor.sh  plan_executor_server.py  plan_generator_server.py
client/llm_client/: llm_client.py  raw_client.py
client/local_servers/: plan_generator_server.py
servers/: README.md
servers/fastmcp/: blender-mcp.py  reasdme-quickstart.py  simple_echo.py
servers/servers/: main.py  simple_resource.py
